# GNOME-Vala-Template

./: README.md  io.github.diegoivanme.AdwValaTemplate.json  meson.build
data/: io.github.diegoivanme.AdwValaTemplate.appdata.xml.in  io.github.diegoivanme.AdwValaTemplate.desktop.in  io.github.diegoivanme.AdwValaTemplate.gschema.xml
po/: POTFILES  meson.build
src/: Application.vala  main.vala  meson.build
src/Resources/: resources.gresources.xml  window.ui
src/Widgets/: Window.vala
src/vapi/: config.vapi
